--- a/Estilos/estilosTarjeta.css
+++ b/Estilos/estilosTarjeta.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(images/49066cd709a43dcc797134a62b6eb91f.jpg);
+    background-image: url(../images/49066cd709a43dcc797134a62b6eb91f.jpg);
     background-size: cover;
     
 }
