--- a/Estilos/estilosCompra.css
+++ b/Estilos/estilosCompra.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&display=swap');
 body {
-    background-image: url(images/grandes-companias-videojuegos-experimentan-fondo-inteligencia-artificial_98.webp);
+    background-image: url(../images/grandes-companias-videojuegos-experimentan-fondo-inteligencia-artificial_98.webp);
 }
 fieldset {
     background-color: #1b2838;
